crates/atlas-runtime/tests/corpus/fail/type_errors/undeclared_function.atlas
let result: number = nonexistent_function(42);
